Upgrade DevServer to Vaadin 24.4 #3441